--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,11 +1,12 @@
 .header {
   margin-inline: -20px;
-  padding-block: 4vw;
+  padding-block: max(4vw, 0.4rem);
   background-color: var(--color-white);
 }
 
 .title {
+  margin: 0;
+  font-size: max(10vw, 2rem);
   text-align: center;
-  font-size: 10vw;
   color: var(--color-blue);
 }
