--- a/src/components/bootstrap-modal/bsmodal.module.css
+++ b/src/components/bootstrap-modal/bsmodal.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
 }
-
+/* TODO установить минимальную ширину */
 .body {
   margin-bottom: 20px;
   text-align: center;
