--- a/src/assets/styles/basic.css
+++ b/src/assets/styles/basic.css
@@ -34,8 +34,9 @@
   --color-light-grey: #efefef;
 
   /* sizes */
-  --size-title: 8vw;
-  --margin-base: 4vw;
+  --size-title: min(8vw, 79px);
+
+  --margin-base: min(4vw, 40px);
   --container-max-width: 991px;
 }
 
@@ -49,7 +50,7 @@ body {
 }
 
 .main {
-  margin-top: 18.5vw;
+  margin-top: calc(calc(var(--size-title) * 2) + calc(var(--size-title) / 2.5));
 }
 
 .container {
